objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Authorized_Product_Lines__c</fullName>
        <label>Authorized Product Lines</label>
        <picklist>
            <picklistValues>
                <fullName>070 - Steering Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>073 - Steering Valve Blocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>074 - DCV Spool Valves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>078 - PVG32/120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>088 - PVG 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 - Small Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201 - Large Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A01 - Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20 - Series 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30 - Light Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A31 - Series 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A33 - M46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A34 - Series 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A36 - Series 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A37 - Series 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A58 - Other Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A65 - TMP/TMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A75 - LV/KV Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A81 - Electrohydraulic Power Steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A85 - PCS Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A86 - PCS Other Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A87 - PCS Positioning Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A88 - PCS Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A89 - PCS System Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B01 - Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B03 - Joystick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B83 - OSK S10/S15/S16/S18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C06 - Custom Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C15 - SV Shared Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C26 - M35/44</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Attributes__c</fullName>
        <label>Channel Attributes</label>
        <picklist>
            <controllingField>Channel__c</controllingField>
            <picklistValues>
                <fullName>Authorized Service Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Center - JS7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Center - OMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Center - PVG 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Center - PVG 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Center - PVG 32/120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Center - VMP/VMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCV Legacy Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Line (AM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Line National (AU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Line Regional (AU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Line Regional (AU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid Delivery Center - H1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid Delivery Center - PVG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid Delivery Center - Series 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery Center - DH/DS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery Center - OMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery Center - VMP/VMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Function</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_ID__c</fullName>
        <description>Bulletin Number, SAP Literature Number, Std Work Number</description>
        <inlineHelpText>Enter the Publication Number of the Document you are loading, if one is available.</inlineHelpText>
        <label>Content ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assembly Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Let&apos;s Torque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Graphic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique Selling Points Handbook</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Viewers__c</fullName>
        <formula>IF(LEN( $User.ContactId ) = 0,
HYPERLINK( &apos;../00OC0000005Ct66?pv0=&apos;+Id, &apos;Content Viewer&apos;),&quot;&quot;)</formula>
        <label>Content Viewers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cote D&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faroe Islands</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>SECORE Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Tier1 Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier2 Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier3 Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Acc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Segment 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Segment 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Segment 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Segment 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Segment 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Segment 6</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expert_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The expert tool lookup</description>
        <label>Installation Instructions</label>
        <referenceTo>Expert_Tools__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Library_Ids__c</fullName>
        <label>Library IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Schedule__c</fullName>
        <label>Price Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100/115</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>To track publication revision level vs. SFDC version level.</description>
        <label>Revision</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VersionNumberInteger__c</fullName>
        <formula>VALUE( VersionNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VersionNumberInteger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Announcement</fullName>
        <active>true</active>
        <label>Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assembly_Specification</fullName>
        <active>true</active>
        <label>Assembly Specification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comatrol_Content</fullName>
        <active>true</active>
        <label>Comatrol Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Presentations</fullName>
        <active>true</active>
        <label>Customer Presentations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interactive_Content</fullName>
        <active>true</active>
        <description>PS Interactive Content</description>
        <label>Interactive Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Let_s_Torque</fullName>
        <active>true</active>
        <label>Let&apos;s Torque</label>
    </recordTypes>
    <recordTypes>
        <fullName>Logos</fullName>
        <active>true</active>
        <label>Logo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Press_Release</fullName>
        <active>true</active>
        <label>Press Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Price_File</fullName>
        <active>true</active>
        <label>Price File</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricebook</fullName>
        <active>true</active>
        <label>Price Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing_tool</fullName>
        <active>true</active>
        <label>Pricing Tool</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Graphic</fullName>
        <active>true</active>
        <label>Product Graphic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Image</fullName>
        <active>true</active>
        <label>Product Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Information_Bulletin</fullName>
        <active>true</active>
        <label>Product Information Bulletin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Bulletin</fullName>
        <active>true</active>
        <label>Service Bulletin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Literature</fullName>
        <active>true</active>
        <label>Technical Literature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_Specification</fullName>
        <active>true</active>
        <label>Test Specification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tools</fullName>
        <active>true</active>
        <label>Tools</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unique_Selling_Points_Handbook</fullName>
        <active>true</active>
        <label>Unique Selling Points Handbook</label>
    </recordTypes>
</CustomObject>